--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "luna-snake-quest",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "npx serve . -l $PORT -s"
+  },
   "dependencies": {
     "serve": "^14.0.0"
   }
