--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npx serve . -l $PORT -s"
+    "start": "serve . -l $PORT -s"
   },
   "dependencies": {
     "serve": "^14.0.0"
